src/tests/testfiles/ternary-operator/types-2.txt
Error at 3:15: Ternary conditional operator alternatives should be of equal type
(1 || 2 ? 0 : 'a');
          ^
